--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-project",
   "version": "0.1.0",
+  "homepage": "https://react.invent-integrasi.co.id",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
